crates/tests/libs/bindgen/data/error/property_unknown_attr/input.rdl

#[win32]
mod Test {
    interface IFoo {
        #[special]
        Value: i32;
    }
}
        